@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="context.venom" name="Venom - Global Context Menu Items" provider-name="Venom" version="1.1.6">
+<addon id="context.venom" name="Venom - Global Context Menu Items" provider-name="Venom" version="1.1.7">
 	<requires>
 		<import addon="script.module.requests" version="2.19.1" />
 	</requires>
@@ -25,10 +25,12 @@
 			<item library="clearProviders.py">
 				<label>[B][COLOR red]Venom[/COLOR][/B] - Clear Providers</label>
 				<visible>
-					!String.IsEmpty(Window(home).Property(context.venom.clearProviders)) +
+					[!String.IsEmpty(Window(home).Property(context.venom.clearProviders)) +
 					String.StartsWith(ListItem.FolderPath,plugin://plugin.video.venom/?action=play) +
 					String.IsEqual(ListItem.Property(isVenom_widget),true) +
-					[String.IsEqual(ListItem.dbtype,episode) | String.IsEqual(ListItem.dbtype,movie)]
+					[String.IsEqual(ListItem.dbtype,episode) | String.IsEqual(ListItem.dbtype,movie)]] |
+					[String.Contains(Container.FolderPath,videodb://) + String.Contains(Container.ListItem.Path,plugin.video.venom) +
+					[String.IsEqual(ListItem.dbtype,episode) | String.IsEqual(ListItem.dbtype,movie)]]
 				</visible>
 			</item>
 			<item library="clearBookmark.py">
@@ -44,14 +46,10 @@
 			<item library="rescrape.py">
 				<label>[B][COLOR red]Venom[/COLOR][/B] - Rescrape Item</label>
 				<visible>
-					!String.IsEmpty(Window(home).Property(context.venom.rescrape)) +
+					[!String.IsEmpty(Window(home).Property(context.venom.rescrape)) +
 					String.StartsWith(ListItem.FolderPath,plugin://plugin.video.venom/?action=play) +
 					String.IsEqual(ListItem.Property(isVenom_widget),true) +
-					[String.IsEqual(ListItem.dbtype,episode) | String.IsEqual(ListItem.dbtype,movie)]
-<!-- Future for Library CM to Rescrape -->
-<!-- 					!String.IsEmpty(Window(home).Property(context.venom.rescrape)) + -->
-<!-- 					[String.Contains(ListItem.Path,plugin.video.venom) + String.IsEqual(ListItem.FileExtension,strm) | String.StartsWith(ListItem.FolderPath,plugin://plugin.video.venom/?action=play)] + -->
-<!-- 					[String.IsEqual(ListItem.dbtype,episode) | String.IsEqual(ListItem.dbtype,movie)] -->
+					[String.IsEqual(ListItem.dbtype,episode) | String.IsEqual(ListItem.dbtype,movie)]]
 				</visible>
 			</item>
 			<item library="playFromHere.py">
@@ -128,10 +126,9 @@
 			<screenshot></screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v1.1.6 - May 26, 2021[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Update "Browse Series" to reflect "tvshow.clearart" and "tvshow.clearlogo"
-    changes in Venom  This is only seen when Venom is set to "Direct Progress Scraping"
-    and "Browse Serires" is chosen.[/I]
+[B][COLOR red]Update - v1.1.7 - June 03, 2021[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] "Clear Providers" is now availble for Library Items via context menu for
+    items added from the Venom addon.[/I]
 		</news>
 	</extension>
 </addon>
