@@ -1,4 +1,8 @@
 
+[B][COLOR red]Update - v1.1.7 - June 03, 2021[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] "Clear Providers" is now availble for Library Items via context menu for
+    items added from the Venom addon.[/I]
+
 [B][COLOR red]Update - v1.1.6 - May 26, 2021[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Update "Browse Series" to reflect "tvshow.clearart" and "tvshow.clearlogo"
     changes in Venom  This is only seen when Venom is set to "Direct Progress Scraping"
